--- a/trybe-exercises/Bloco3/dia4/style2.css
+++ b/trybe-exercises/Bloco3/dia4/style2.css
@@ -47,7 +47,7 @@ body {
 }
 
 .section1 ul {
-	background-color: yellow;
+	/* background-color: yellow; */
 	text-align: left;
 	display: inline-block;
 }
@@ -60,4 +60,18 @@ body {
 	padding-left: 10px;
 	text-align: left;
 	padding-top: 10px;
+}
+
+.section2 {
+	margin-inline: 40px;
+	margin-top: 30px;
+}
+
+.section2 h3 {
+	margin-bottom: 20px;
+}
+
+.section2 img {
+	width: 150px;
+	float: right;
 }
